[project]
name = "pydata-human-in-the-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
